# devs-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: README.md  cli-commands.md  data-model.md  design.md  implementation-plan.md  user-stories.md
docs/reference/: iterm2-colors.md  tmux-layouts.md
projects/: INDEX.md  README.md
projects/2026-03-06-multi-machine-config/: progress.md
projects/2026-03-06-v1-1-polish/: README.md  plan.md  progress.md
projects/2026-03-09-cwd-project-inference/: plan.md  review.md
projects/2026-03-09-docs-consistency/: plan.md
projects/2026-03-09-dynamic-completions/: plan.md  skeptical-review.md
projects/2026-03-09-edit-local-flag/: plan.md
projects/2026-03-09-ux-improvements/: summary.md
src/: main.rs  test_support.rs
src/adapters/: config_version.rs  iterm_terminal_adapter.rs  migration.rs  mod.rs  noop_terminal_adapter.rs  os_process_launcher.rs  shell_tmux_adapter.rs  split_config.rs  toml_local_config.rs  toml_project_repository.rs
src/cli/: claude.rs  claude_done.rs  claudes.rs  close.rs  completions.rs  config.rs  edit.rs  format.rs  init.rs  list.rs  man.rs  mod.rs  new.rs  note.rs  notes.rs  open.rs  remove.rs  reset.rs  resolve.rs  save.rs  status.rs  tmux_help.rs
src/domain/: claude_session.rs  duration.rs  layout.rs  local_config.rs  mod.rs  note.rs  path.rs  project.rs  saved_state.rs  test_helpers.rs
src/ports/: local_config.rs  mod.rs  process_launcher.rs  project_repository.rs  terminal_adapter.rs  (+1 more)
tests/: cli_tests.rs
