[package]
name = "devs-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "devs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

