[package]
name = "devs-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Project-aware tmux session manager with Claude Code session tracking"
repository = "https://github.com/julianmateu/devs-cli"
authors = ["Julian Mateu"]
keywords = ["tmux", "session", "project", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "devs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "unstable-ext"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

